--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   permission_handler: ^11.0.1
   geolocator: ^9.0.2
   cached_network_image: ^3.3.0
+  rxdart: ^0.27.7
 
 
 dev_dependencies:
