--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: llama_market
+name: randimarket
 description: "A new Flutter project."
 publish_to: 'none'
 version: 1.0.0+1
@@ -29,3 +29,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
