recuperacion de la clave

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
 
+    <meta-data android:name="flutter_deeplinking_enabled" android:value="false" />
+
     <application
         android:label="Llama-Market"
         android:name="${applicationName}"
@@ -35,16 +37,12 @@
         <category android:name="android.intent.category.LAUNCHER"/>
     </intent-filter>
 
-    <!-- Deep link / callback -->
     <intent-filter>
         <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
-        <data
-            android:scheme="com.grupo6.llamamarket"
-            android:host="callback"/>
+        <data android:scheme="com.grupo6.llamamarket"/>
     </intent-filter>
-
 </activity>
 
 
